QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- The internal XRUN callback notification statistics and reporting has
  been changed to be a bit less intrusive.

- Patchbay socket dialog gets some more eye-candy as icons have been
  added to the client and plug selection (combobox) widgets.

- Connections and patchbay lines coloring has changed just slightly :)

- New patchbay socket forwarding feature. Any patchbay socket can now
  be set to have all its connections replicated (i.e. forwarded) to
  another one, which will behave actively as a clone of the former.
  Forward connections are shown by vertical directed colored lines,
  and can be selected either on socket dialog or from context menu
  (currently experimental, only applicable to input/writable sockets).

- Optional specification of alternate JACK and/or ALSA installation
  paths on configure time (after a patch from Lucas Brasilino, thanks).


0.2.19a  2005-11-28  MIDI aliases are back in town.

- ALSA sequencer client/port name aliases are functional again; all
  actual MIDI sequencer client/port numerical identifier prefixes are
  also back in business.


0.2.19   2005-11-19  MRU patchbay selection, Mac OS X and other fixes.

- Connections widget views are now properly refreshed after renaming
  client/ports (aliases).

- Disabled system tray and ALSA sequencer support on configure time,
  whenever building for MacOSX as default.

- Fixed the major issues with selecting an audio interface on Mac OSX;
  the button the right of the interface combo is now much better
  looking than it was before; input/output channel counts are also
  updated automatically now (thanks to Jesse Chappell for the patch).

- Prevent the setting of the coreaudio device id on the jackd command
  line (-n) whenever the default interface is being selected.

- The connections and patchbay windows are now allowed to have a wider